welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: ';' expected but 'if' found.
  	}if (getY() + 1 <= yf){
         ^