welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var xf:Int = getWorldWidth() - 1
  var yf:Int = getWorldHeight() - 1
  
  while (! (xf == getX() && yf == getY()) ){
      
  	}if (getY() + 1 <= yf){
      setPos(getX(), getY() + 1)
      
    }else{
      setPos(getX() + 1, 0)
    }
}